ops/cloudformation/alb.yml
# To Create ALB Stack:
# aws cloudformation deploy --stack-name alb --template-file ops/cloudformation/alb.yml --parameter-overrides VPCStackName=${VPCStackName} HostedZoneName=${HostedZoneName} Environment=${Environment} SSLCertificateARN=${SSLCertificateARN}
  AWSTemplateFormatVersion: "2010-09-09"

  Description: "Creates: ALB Security Group, App Load Balacer,
                Default Target Group, ALB Listeners"

  Parameters:
    VPCStackName:
      Type: String
      AllowedValues: [ DevVPC, ProdVPC ]
    Environment:
      Type: String
      Description: Dev or Prod
      AllowedValues: [ Dev, Prod ]
    SSLCertificateARN:
      Type: String
      Description: ARN of existing SSL Certificate.

  Resources:
    ALBSecurityGroup:
      Type: 'AWS::EC2::SecurityGroup'
      Properties:
        GroupDescription: Enable HTTP and HTTPS access via ports 80 and 443
        VpcId:
          Fn::ImportValue: !Sub '${VPCStackName}-VPCId'
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: 'Name'
            Value: 'ALBsg'
          - Key: 'Environment'
            Value: !Ref Environment

    AppLoadBalancer:
      Type: AWS::ElasticLoadBalancingV2::LoadBalancer
      Properties:
        IpAddressType: 'ipv4'
        Name: 'A3-ALB'
        Scheme: 'internet-facing'
        SecurityGroups:
          - Ref: ALBSecurityGroup
        Subnets:
          - Fn::ImportValue: !Sub '${VPCStackName}-PublicSubnet0'
          - Fn::ImportValue: !Sub '${VPCStackName}-PublicSubnet1'
        Tags:
          - Key: 'Name'
            Value: 'AppLB'
          - Key: 'Environment'
            Value: !Ref Environment

    WebTargetGroup:
      Type: AWS::ElasticLoadBalancingV2::TargetGroup
      Properties:
        HealthCheckIntervalSeconds: 10
        HealthCheckPath: '/'
        HealthCheckProtocol: HTTP
        HealthCheckTimeoutSeconds: 5
        HealthyThresholdCount: 2
        UnhealthyThresholdCount: 2
        Matcher:
          HttpCode: '200-299'
        Name: tgWeb
        Port: 8080
        Protocol: HTTP
        TargetType: instance
        VpcId:
          Fn::ImportValue: !Sub '${VPCStackName}-VPCId'
        Tags:
        - Key: 'Name'
          Value: 'tgWeb'
        - Key: 'Port'
          Value: '8080'
        - Key: 'Environment'
          Value: !Ref Environment

    HttpListener:
      Type: AWS::ElasticLoadBalancingV2::Listener
      Properties:
        DefaultActions:
          - Type: redirect
            RedirectConfig:
              Protocol: HTTPS
              Port: '443'
              StatusCode: HTTP_301
        LoadBalancerArn: !Ref AppLoadBalancer
        Port: 80
        Protocol: HTTP

    HttpsListener:
      Type: 'AWS::ElasticLoadBalancingV2::Listener'
      Properties:
        Certificates:
          - CertificateArn: !Ref SSLCertificateARN
        DefaultActions:
          - Type: forward
            TargetGroupArn: !Ref WebTargetGroup
        LoadBalancerArn: !Ref AppLoadBalancer
        Port: 443
        Protocol: HTTPS

  Outputs:
    AppLoadBalancerARN:
      Description: 'ARN of the ALB'
      Value: !Ref AppLoadBalancer
      Export:
        Type: String
        Name: !Sub '${AWS::StackName}-ALB-ARN'
    AppLoadBalancerDNSName:
      Description: 'The original DNS Name of the ALB'
      Value: !GetAtt AppLoadBalancer.DNSName
      Export:
        Type: String
        Name: !Sub '${AWS::StackName}-ALB-DNSName'
    AppLoadBalancerHTTPSListenerARN:
      Description: 'The ARN of the ALB HTTPS Listener'
      Value: !Ref HttpsListener
      Export:
        Type: String
        Name: !Sub '${AWS::StackName}-HttpsListener-ARN'
    HostedZoneID:
      Description: 'The ID of the Hosted Zone associated with the ALB'
      Value: !GetAtt AppLoadBalancer.CanonicalHostedZoneID
      Export:
        Type: String
        Name: !Sub '${AWS::StackName}-Associate-HostedZoneID'
    tgWebARN:
      Description: 'ARN of the Target Group Web'
      Value: !Ref WebTargetGroup
      Export:
        Type: String
        Name: !Sub '${AWS::StackName}-tgWeb-ARN'
